# kakeibo-ai

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEO_EXPANSION_PLAN.md  README.md  SECURITY.md  USER_GROWTH_PLAN.md  USER_MANUAL.md  app.py  database.py  i18n.py  insights.py  pyproject.toml  requirements.txt  ruff.toml  test.py  test_gemini.py
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
ai/: __init__.py  context_builder.py  gemini_provider.py  ollama_provider.py  provider.py
auth/: __init__.py  auth.py  auth_ui.py
config/: ai_config.py
locale/: en.json  mr.json  te.json
locales/: en.json  hi.json  mr.json  te.json
specs/: spec.md
specs/001-kakeiboai/: LICENSE  plan.md  spec.md  tasks.md
specs/001-kakeiboai-personal-finance-coach/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_auth.py  test_database.py
